--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <!--formulario de login y register-->
-            <div class="contenedor__login-register">
+            <div class="contenedor_login-register">
                 <form action="" class="formulario__login">
                     <h2>Iniciar cesion</h2>
                     <input type="text" placeholder="Correo Electronico">
@@ -45,6 +45,7 @@
         </div>
 
     </main>
+    <script src=""></script>
 </body>
 
 </html>
